--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="embracell-logo.png" alt="Logo Embracell" class="logo">
+    <img src="embracell-logo.PNG" alt="Logo Embracell" class="logo">
   </header>
 
   <main>
@@ -18,8 +18,8 @@
 
     <div class="botoes">
       <a href="consulta-os.html" class="btn">Consultar OS</a>
-      <a href="login-tecnico.html" class="btn">Login Técnico</a>
-      <a href="login-admin.html" class="btn">Login Admin</a>
+      <a href="login-tecnico.html" class="btn">Área do técnico</a>
+      <a href="login-admin.html" class="btn">Área administrativa</a>
     </div>
   </main>
 
