consulta-os.html

--- a/consulta-os.html
+++ b/consulta-os.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-    <h1>Consulta de Ordem de Serviço</h1>
+    <h1>Consultar Ordem de Serviço</h1>
     <form id="consultaForm">
       <input type="text" id="numeroOS" placeholder="Digite o número da OS" required />
       <button type="submit" class="btn">Buscar</button>
