--- a/login-tecnico.html
+++ b/login-tecnico.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="embracell-logo.png" alt="Logo Embracell" class="logo" />
+    <img src="embracell-logo.PNG" alt="Logo Embracell" class="logo" />
   </header>
 
   <main>
